syntax = "proto3";
package schema.v2;

import "v2/document.proto";

message IndexDocumentRequest {
  int32 project_generate_queue_id = 1;
  int32 project_id = 2;
  core.Document document = 3;
}

message IndexDocumentResponse {
  int32 project_generate_queue_id = 1;
  optional string message = 2;
  Status status = 4;
  string error_message = 7;

  enum Status {
    SUCCEEDED = 0;
    INPROGRESS = 1;
    FAILED = 2;
  }
}

message DeleteIndexDocumentRequest {
  int32 project_generate_queue_id = 1;
  int32 project_id = 2;
  repeated string document_uuids = 3;
}

message DeleteIndexDocumentResponse {
  int32 project_generate_queue_id = 1;
  optional string message = 2;
  Status status = 4;
  string error_message = 7;

  enum Status {
    SUCCEEDED = 0;
    INPROGRESS = 1;
    FAILED = 2;
  }
}
